2007-02-23  Bruno Haible  <bruno@clisp.org>

	Change "make alls" and "make allo" to recurse into subdirectories.
	* src/Makefile.in (alls-local): Renamed from alls.
	(allo-local): Renamed from allo.
	(SUBDIRS_TARGET_ALL): Renamed from SUBDIRS_TARGET.
	(alls, allo): New rules.
	(SUBDIRS_TARGET_ALLS, SUBDIRS_TARGET_ALLO): New variables.

2007-02-22  Richard B. Kreckel  <kreckel@ginac.de>

	* include/cln/integer_io.h (read_integer): Make index args uintC.
	* src/integer/input/cl_I_readparsed.cc: Likewise.
	* include/cln/rational_io.h (read_rational): Likewise.
	* src/rational/input/cl_RA_readparsed.cc: Likewise
	* include/cln/float_io.h (read_float): Likewise.
	* src/float/input/cl_F_readparsed.cc: Likewise.
	* src/vector/output/cl_GV_number_aprint.cc: Vector lengths are uintC.
	* src/vector/output/cl_SV_aprint.cc: Likewise.
	* src/vector/output/cl_SV_number_aprint.cc: Likewise.

2007-02-15  Richard B. Kreckel  <kreckel@ginac.de>

	* m4/cc.m4 (CL_HAVE_ATTRIBUTE_FLATTEN): More robust definition allows...
	* src/base/cl_maybe_inline.h (CL_FLATTEN): ...simplification here.

2007-02-10  Richard B. Kreckel  <kreckel@ginac.de>

	* autoconf/ltmain.sh: Update to libtool-1.5.26.
	* autoconf/config.guess: Likewise.
	* autoconf/config.sub: Likewise.
	* m4/libtool.m4: Likewise.

2007-02-09  Alexei Sheplyakov  <varg@theor.jinr.ru>
            Richard B. Kreckel  <kreckel@ginac.de>

	Avoid compiler warning about ignored 'flatten' attribute directive:
	* m4/cc.m4 (CL_ATTRIBUTE_FLATTEN): New macro...
	* configure.ac: ...used here...
	* include/cln/config.h.in: ...defining CL_HAVE_ATTRIBUTE_FLATTEN,...
	* src/base/cl_maybe_inline.h: ...used to prevent a warning here.

2007-02-07  Richard B. Kreckel  <kreckel@ginac.de>

	* include/cln/integer.h: Enable modifying operators by default.
	* include/cln/rational.h: Likewise.
	* include/cln/sfloat.h: Likewise.
	* include/cln/ffloat.h: Likewise.
	* include/cln/dfloat.h: Likewise.
	* include/cln/lfloat.h: Likewise.